--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,3 +1,6 @@
+<% include partials/header  %>
+
+
 <h1>This is the campgrounds page</h1>
 <% campgrounds.forEach(function(campground){ %>
    <div>
@@ -5,3 +8,6 @@
        <img src="<%= campground.image %>"></img>
    </div>
 <% }); %>
+
+<% include partials/footer  %>
+
