add NEW and CREATE for Restfull recipe

--- a/RESTfulBlogApp/views/index.ejs
+++ b/RESTfulBlogApp/views/index.ejs
@@ -1,5 +1,5 @@
 
-
+<% include ./partials/header %>
 <h1>INDEX PAGE</h1>
 
 <% blogs.forEach(function(blog) {  %>
@@ -12,6 +12,9 @@
 
     </div>
 
-<% }) %>
+<% }); %>
+
+<img src="http://1.bp.blogspot.com/-jjwz8SD3N0k/ViFjNRYCt9I/AAAAAAAAABc/aBAS4Ru-0wQ/s1600/images.jpg">
 
 
+<% include ./partials/footer %>
