--- a/RESTfulBlogApp/views/show.ejs
+++ b/RESTfulBlogApp/views/show.ejs
@@ -12,6 +12,13 @@
 		<div class="description">
 			<p><%- blog.body %></p>
 		</div>
+		<a class="ui orange inverted button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+		<form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
+		    <button class="ui red inverted button">Delete</button>
+			
+		</form>
+
+
 	</div>
 	
 	
