--- a/v4/views/campgrounds/show.ejs
+++ b/v4/views/campgrounds/show.ejs
@@ -3,6 +3,11 @@
 <h1><%= campground.name %></h1>
 <img src="<%= campground.image %>"></img>
 <%= campground.description %>
+
+<p>
+	<a class="btn btn-default"href="/campgrounds/<%= campground._id %>/comments/new">Add New campground</a>
+</p>
+
 <% campground.comments.forEach(function(comment){ %>
 	<p>
 	<strong><%= comment.author %></strong> ppppp- <%= comment.text %>
