--- a/v5/views/partials/header.ejs
+++ b/v5/views/partials/header.ejs
@@ -3,6 +3,7 @@
     <head>
         <title>fakeCamp</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"></link>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     </head>
     <body>
     <nav class="navbar navbar-default">
