--- a/v6/views/register.ejs
+++ b/v6/views/register.ejs
@@ -1,3 +1,6 @@
+<% include ../views/partials/header  %>
+
+
 <h1>Sign Up!</h1>
 <form action="/register" method="POST">
 	<input type="text" name="username" placeholder="username">
@@ -5,3 +8,5 @@
 	<input type="submit" name="Sign Up!">
 	
 </form>
+
+<% include ../views/partials/footer  %>
