Add Logout route--Prevent user from adding a comment if not signed in -- add links to navbar

--- a/v6/views/register.ejs
+++ b/v6/views/register.ejs
@@ -1,12 +1,8 @@
-<% include ../views/partials/header  %>
-
-
+<% include ./partials/header  %>
 <h1>Sign Up!</h1>
 <form action="/register" method="POST">
 	<input type="text" name="username" placeholder="username">
 	<input type="password" name="password" placeholder="password">
-	<input type="submit" name="Sign Up!">
-	
+	<button>Submit</button>
 </form>
-
-<% include ../views/partials/footer  %>
+<% include ./partials/footer  %>
