--- a/v6/views/landing.ejs
+++ b/v6/views/landing.ejs
@@ -1,4 +1,4 @@
-<% include partials/header  %>
+<% include ./partials/header  %>
 
 <h1>Landing Page</h1>
 
@@ -8,4 +8,4 @@
 
 
 
-<% include partials/footer  %>
+<% include ./partials/footer  %>
